[metadata]
name = sumple-api
version = file: src/VERSION
author = Ben Weeks
author_email = ben@itsbenweeks.com
description = A simple API to gather the sum of post values over the past hour.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/itsbenweeks/sumple_api
project_urls =
    Bug Tracker = https://github.com/itsbenweeks/sumple_api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
 = src
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = src

[console_scripts]
sumple_api = sumple_api.app:app.run

